evaluation/inter_folder/cfg15/g4_folder/cfg15Parser.py
# Generated from ./g4_folder/cfg15.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cfg15Parser ( Parser ):

    grammarFileName = "cfg15.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'a'", "'c'", "'b'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS" ]

    RULE_s = 0
    RULE_s1 = 1
    RULE_s10 = 2
    RULE_s11 = 3
    RULE_s2 = 4
    RULE_s3 = 5
    RULE_s4 = 6
    RULE_s5 = 7
    RULE_s6 = 8
    RULE_s7 = 9
    RULE_s8 = 10
    RULE_s9 = 11

    ruleNames =  [ "s", "s1", "s10", "s11", "s2", "s3", "s4", "s5", "s6", 
                   "s7", "s8", "s9" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s1(self):
            return self.getTypedRuleContext(cfg15Parser.S1Context,0)


        def s2(self):
            return self.getTypedRuleContext(cfg15Parser.S2Context,0)


        def s8(self):
            return self.getTypedRuleContext(cfg15Parser.S8Context,0)


        def getRuleIndex(self):
            return cfg15Parser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = cfg15Parser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.s1()
            self.state = 25
            self.s2()
            self.state = 26
            self.s8()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cfg15Parser.RULE_s1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS1" ):
                listener.enterS1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS1" ):
                listener.exitS1(self)




    def s1(self):

        localctx = cfg15Parser.S1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_s1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(cfg15Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S10Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s11(self):
            return self.getTypedRuleContext(cfg15Parser.S11Context,0)


        def getRuleIndex(self):
            return cfg15Parser.RULE_s10

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS10" ):
                listener.enterS10(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS10" ):
                listener.exitS10(self)




    def s10(self):

        localctx = cfg15Parser.S10Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_s10)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(cfg15Parser.T__1)
            self.state = 31
            self.s11()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S11Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s11(self):
            return self.getTypedRuleContext(cfg15Parser.S11Context,0)


        def EOF(self):
            return self.getToken(cfg15Parser.EOF, 0)

        def getRuleIndex(self):
            return cfg15Parser.RULE_s11

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS11" ):
                listener.enterS11(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS11" ):
                listener.exitS11(self)




    def s11(self):

        localctx = cfg15Parser.S11Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_s11)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(cfg15Parser.T__1)
                self.state = 34
                self.s11()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.match(cfg15Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s3(self):
            return self.getTypedRuleContext(cfg15Parser.S3Context,0)


        def getRuleIndex(self):
            return cfg15Parser.RULE_s2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS2" ):
                listener.enterS2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS2" ):
                listener.exitS2(self)




    def s2(self):

        localctx = cfg15Parser.S2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_s2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(cfg15Parser.T__2)
            self.state = 39
            self.s3()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s4(self):
            return self.getTypedRuleContext(cfg15Parser.S4Context,0)


        def getRuleIndex(self):
            return cfg15Parser.RULE_s3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS3" ):
                listener.enterS3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS3" ):
                listener.exitS3(self)




    def s3(self):

        localctx = cfg15Parser.S3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_s3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(cfg15Parser.T__2)
            self.state = 42
            self.s4()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s5(self):
            return self.getTypedRuleContext(cfg15Parser.S5Context,0)


        def EOF(self):
            return self.getToken(cfg15Parser.EOF, 0)

        def getRuleIndex(self):
            return cfg15Parser.RULE_s4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS4" ):
                listener.enterS4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS4" ):
                listener.exitS4(self)




    def s4(self):

        localctx = cfg15Parser.S4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_s4)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(cfg15Parser.T__2)
                self.state = 45
                self.s5()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(cfg15Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s6(self):
            return self.getTypedRuleContext(cfg15Parser.S6Context,0)


        def EOF(self):
            return self.getToken(cfg15Parser.EOF, 0)

        def getRuleIndex(self):
            return cfg15Parser.RULE_s5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS5" ):
                listener.enterS5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS5" ):
                listener.exitS5(self)




    def s5(self):

        localctx = cfg15Parser.S5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_s5)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(cfg15Parser.T__2)
                self.state = 50
                self.s6()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(cfg15Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S6Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s7(self):
            return self.getTypedRuleContext(cfg15Parser.S7Context,0)


        def EOF(self):
            return self.getToken(cfg15Parser.EOF, 0)

        def getRuleIndex(self):
            return cfg15Parser.RULE_s6

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS6" ):
                listener.enterS6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS6" ):
                listener.exitS6(self)




    def s6(self):

        localctx = cfg15Parser.S6Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_s6)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(cfg15Parser.T__2)
                self.state = 55
                self.s7()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(cfg15Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S7Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cfg15Parser.EOF, 0)

        def getRuleIndex(self):
            return cfg15Parser.RULE_s7

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS7" ):
                listener.enterS7(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS7" ):
                listener.exitS7(self)




    def s7(self):

        localctx = cfg15Parser.S7Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_s7)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(cfg15Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S8Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s9(self):
            return self.getTypedRuleContext(cfg15Parser.S9Context,0)


        def getRuleIndex(self):
            return cfg15Parser.RULE_s8

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS8" ):
                listener.enterS8(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS8" ):
                listener.exitS8(self)




    def s8(self):

        localctx = cfg15Parser.S8Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_s8)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(cfg15Parser.T__1)
            self.state = 62
            self.s9()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S9Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s10(self):
            return self.getTypedRuleContext(cfg15Parser.S10Context,0)


        def getRuleIndex(self):
            return cfg15Parser.RULE_s9

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS9" ):
                listener.enterS9(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS9" ):
                listener.exitS9(self)




    def s9(self):

        localctx = cfg15Parser.S9Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_s9)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(cfg15Parser.T__1)
            self.state = 65
            self.s10()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





